--- a/site-institucional/css/style-index.css
+++ b/site-institucional/css/style-index.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+
 }
 
 html {
@@ -10,9 +11,21 @@ html {
 
 #home {
     height: 100vh;
-    background: url('../img/background-cptm.png');
+    background: url(../img/fundo-contato.jpg);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+}
+
+.imagem-home{
+    width: 50%;
+    height: 60%;
+    align-self: flex-end;
+    background: url(../img/undraw_charts_jj6t.png);
     background-size: cover;
 }
+
+
 
 .section {
     text-align: center;
@@ -271,7 +284,7 @@ div.area-contato {
     background: white;
     width: 70%;
     height: 90%;
-    border-radius: 25px;
+    border-radius: 10px;
     display: grid;
     grid-template-columns: 1.5fr 1fr;
     box-shadow: 0px 5px 10px 5px rgba(37, 37, 37, 0.185);
