--- a/site-institucional/css/style-index.css
+++ b/site-institucional/css/style-index.css
@@ -19,7 +19,7 @@ html {
 
 .imagem-home{
     width: 50%;
-    height: 60%;
+    height: 40%;
     align-self: flex-end;
     background: url(../img/undraw_charts_jj6t.png);
     background-size: cover;
@@ -181,7 +181,7 @@ html {
     width: 90%;
     height: 100%;
     align-self: center;
-    background: url(../img/undraw_data_xmfy.png);
+    background: url(../img/undraw_data_trends_b0wg.png);
     background-size: cover;
     position: relative;
 }
