--- a/site-institucional/css/menu-style.css
+++ b/site-institucional/css/menu-style.css
@@ -25,7 +25,7 @@ img#logo-menu {
 
 div#div-logo-menu h2 {
     margin-left: 2%;
-    color: white;
+    color: rgb(36, 36, 36);
 }
 
 ul#menu-site {
