--- a/site-institucional/css/style-index.css
+++ b/site-institucional/css/style-index.css
@@ -11,7 +11,7 @@ html {
 
 #home {
     height: 100vh;
-    background: url(../img/fundo-contato.jpg);
+    background: url(../img/390030-PCG0RS-190.png);
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -19,11 +19,42 @@ html {
 
 .imagem-home{
     width: 50%;
-    height: 40%;
-    align-self: flex-end;
-    background: url(../img/undraw_charts_jj6t.png);
+    height: 82%;
+    align-self: center;
+    background: url(../img/undraw_laravel_and_vue_59tp.png);
     background-size: cover;
+    margin-right: 15%;
+    margin-top: 3%;
 }
+
+#home .section-intro{
+    padding: 80px;
+    padding-top: 15%;
+    width: 30%;
+    height: 100%;
+}
+
+#home .section-intro button{
+    background: #4772FF;
+    color: white;
+    border: 0;
+    border-radius: 5px;
+    width: 120px;
+    height: 40px;
+    font-size: 18px;
+    margin-top: 20px;
+    margin-left: 2%;
+    outline: none;
+    cursor: pointer;
+}
+
+#home .section-intro button:hover{
+    transition: .5s;
+    background: white;
+    color: #4772FF;
+    border: 3px solid #4772FF;
+}
+
 
 .section {
     text-align: center;
