--- a/site-institucional/css/style-login.css
+++ b/site-institucional/css/style-login.css
@@ -7,8 +7,11 @@
 }
 
 div#mid {
+    width: 70%;
     border-radius: 10px;
     position: relative;
+    display: grid;
+    grid-template-columns: 1fr .8fr;
 }
 
 section#section-img{
@@ -19,8 +22,12 @@ section#section-img{
     flex-direction: column;
     align-items: center;
     background-color: white;
-    /* background: url('../img/undraw_subway_7vh7.png');
-    background-size: cover; */
+    background: url('../img/fundo-login.jpg');
+    background-size: cover;
+}
+
+h2.logo-login {
+    color: white;
 }
 
 section#section-login {
@@ -33,7 +40,7 @@ section#section-login {
 }
 
 div#div-section-img {
-    width: 100%;
+    width: 80%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -44,21 +51,6 @@ div#div-section-img {
 div#div-logo {
     width: 50%;
     height: 10%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-}
-
-h1.h1-logo {
-    font-weight: bold;
-    color: white; 
-    font-size: 50px;
-}
-
-div#texto-img {
-    width: 60%;
-    height: 30%;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -123,7 +115,7 @@ input.input-login, button.btn-login {
 
 input.input-login:focus {
     transition: 0.3s;
-    box-shadow: 0 0 1pt 1pt #6c63ff;
+    box-shadow: 0 0 1pt 1pt #4772ff;
     outline: none;
 }
 
@@ -133,7 +125,7 @@ input.input-login:focus {
 }
 
 button.btn-login {
-    background: #6c63ff;
+    background: #4772ff;
     color: white;
     border: 0px !important;
 }
@@ -141,10 +133,10 @@ button.btn-login {
 button.btn-login:hover {
     transition: 0.3s;
     background: white;
-    color: #6c63ff;
+    color: #4772ff;
     border: 0px;
     cursor: pointer;
-    box-shadow: 0px 0px 2px 2px #6c63ff;
+    box-shadow: 0px 0px 2px 2px #4772ff;
 }
 
 a.form-link {
@@ -155,7 +147,7 @@ a.form-link {
 }
 
 a.form-link:nth-child(2) {
-    color: #6c63ff
+    color: #4772ff
 }
 
 /* ANIMAÇÃO DE DIGITAÇÃO */
