--- a/simulador/css/style.css
+++ b/simulador/css/style.css
@@ -6,7 +6,40 @@
 body {
     display: flex;
     justify-content: center;
+    background: url(../img/fundo-contato.jpg);
+    background-size: cover;
+}
+
+#voltar {
+    background: white;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    display: flex;
     align-items: center;
+    justify-content: center;
+    background: #4772ff;
+    position: absolute;
+    top: -4%;
+    left: -2%;
+}
+
+.icon {
+    font-size: 4vh;
+    color: white;
+}
+
+#voltar:hover {
+    background: white;
+    cursor: pointer;
+    transition: .5s;
+
+}
+
+.titulo {
+    text-align: left;
+    padding-left: 2%;
+    grid-column: 1 / 3;
 }
 
 
@@ -16,12 +49,16 @@ body {
     margin-left: 10px;
 }
 
-
 #simulador {
-    background: yellow;
-    width: 90%;
+    position: relative;
+    width: 70%;
     display: grid;
-    grid-template-columns: .5fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    box-shadow: 5px 2px 10px 2px rgba(63, 63, 63, 0.308);
+    padding: 2.5%;
+    border-radius: 10px;
+    background: white;
+    margin: 2% 0;
 }
 
 #header {
@@ -30,7 +67,6 @@ body {
 }
 
 #form {
-    background: red;
     grid-column: 1;
     grid-row: 2;
     display: flex;
@@ -39,50 +75,78 @@ body {
 }
 
 .div-input-form {
-    background: pink;
     display: flex;
     flex-direction: column;
+    padding: 3%;
+}
+
+.div-input-form span {
+    padding-bottom: .5%;
+}
+
+.input {
+    background: rgb(238, 236, 236);
+    border: 1px solid rgb(238, 236, 236);
+    width: 90%;
+    padding: 2%;
+    border-radius: 5px;
+}
+
+.input:focus {
+    outline: none;
+    border-color: grey;
+    transition: .2s;
 }
 
 #botoes {
-    background: green;
     grid-column: 2;
     grid-row: 2;
     padding: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-#resultado-simulacao {
+.div-linhas {
+    height: 56%;
+}
+
+#resultadoSimulacao {
+    display: none;
     grid-row: 3;
     grid-column: 1 / 3;
-    display: grid;
-    grid-template-columns: .5fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    transition: .5s;
+    margin-top: 5%;
 }
 
 #resultados {
     flex: 1;
-    padding: 0 1%;
-    background: coral;
+    height: 100%;
+    padding: 0 2%;
 }
 
 .topico-resultado {
     font-size: 85%;
     background: white;
-    border-radius: 10px;
-    box-shadow: 6px 6px 10px 1px #29292946;
     height: 100px;
     width: 100%;
-    display: none;
-    margin-bottom: 2%; 
+    margin-top: 5%;
 }
 
 #descricaoLinha {
-    display: none;
     flex: 2;
-    padding: 0 1% 1% 1%;
-    background: orange;
+    height: 100%;
+    padding: 0 2%;
 }
 
 .imagem-resultado {
-    width: 70%; 
-    border-radius: 15px
+    width: 100%;
+    height: 67%;
+    border-radius: 15px;
+    object-fit: cover;
+}
+
+.desc {
+    text-align: justify;
 }
